<resources>
    <string name="app_name">sistem_rt</string>
    <string name="title_activity_sistem">sistem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_kegiatan">Kegiatan</string>
    <string name="menu_iuran">Biaya 2023</string>
    <string name="menu_pengantar">Surat Pengantar</string>
    <string name="menu_info">Info Sistem</string>
    <string name="menu_keluar">Keluar</string>
    <string name="simpan">SIMPAN</string>
    <string name="data_sistem_warga">DATA SISTEM WARGA</string>
    <string name="masukan_alamat">masukan alamat</string>
    <string name="jadwal_kegiatan_di_tahun_2023">JADWAL KEGIATAN DI TAHUN 2023</string>
    <string name="tanggal">TANGGAL</string>
    <string name="kegiatan">KEGIATAN</string>
    <string name="lokasi">LOKASI</string>
    <string name="setiap_tanggal_5">Setiap Tanggal 5</string>
    <string name="arisan_rutin">Arisan Rutin</string>
    <string name="minggu_ke_2">Setiap Minggu ke-2</string>
    <string name="segera_diberitahu">Lokasi ada didalam undangan</string>
    <string name="kerja">Kerja Bakti</string>
    <string name="area_rt_04">Lingkungan RT 04</string>
    <string name="_22_maret">22 Maret - 21 April</string>
    <string name="tarawih">Salat Tarawih</string>
    <string name="_22_agustus">22 April</string>
    <string name="ied">Salat ied</string>
    <string name="_29_juni">29 Juni</string>
    <string name="adha">Salat idul Adha</string>
    <string name="_17_agustus">17 Agustus</string>
    <string name="hut_ri_78">HUT RI 78</string>
    <string name="lapangan">Lapangan</string>
    <string name="malam_jumat">Setiap Malam Jumat</string>
    <string name="pengajian">Pengajian</string>
    <string name="masjid_rt_04">Masjid RT 04</string>
    <string name="_16_agustus">16 Agustus</string>
    <string name="malam">Malam Renungan</string>
    <string name="_18_agustus">18 Agustus</string>
    <string name="lomba_islam">Lomba Adzan dan Ngaji</string>
    <string name="_19_agustus">19 Agustus</string>
    <string name="pembagian">Pembagian Hadiah</string>
    <string name="_20_agustus">20 Agustus</string>
    <string name="perubahan">Perubahan Tugas Remaja</string>
    <string name="_28_september">28 September</string>
    <string name="maulid">Maulid</string>
    <string name="kegiatan_rt_04_2023">Kegiatan RT 04 2023</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="teks">Sistem ini dibuat untuk memenuhi syarat lulus S1</string>
    <string name="teks1">Nama : Gabriela Sitorus</string>
    <string name="teks2">NIM : 12090980</string>
    <string name="teks3">Universitas : Universitas Terbuka</string>
    <string name="activ">KEGIATAN</string>
    <string name="download">download</string>
</resources>