<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_kegiatan">

    <fragment
        android:id="@+id/nav_kegiatan"
        android:name="com.example.sistem_rt.ui.kegiatan.KegiatanFragment"
        android:label="@string/menu_kegiatan"
        tools:layout="@layout/fragment_kegiatan" />

    <fragment
        android:id="@+id/nav_pengantar"
        android:name="com.example.sistem_rt.ui.pengantar.PengantarFragment"
        android:label="Surat Pengantar"
        tools:layout="@layout/fragment_pengantar" />

    <fragment
        android:id="@+id/nav_2022"
        android:name="com.example.sistem_rt.ui.biaya.BiayaFragment"
        android:label="@string/menu_iuran"
        tools:layout="@layout/fragment_biaya" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.sistem_rt.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_keluar"
        android:name="com.example.sistem_rt.ui.keluar.KeluarFragment"
        android:label="@string/menu_keluar"
        tools:layout="@layout/fragment_keluar" />
</navigation>