<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.kegiatan.KegiatanFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_kegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:text="@string/activ"
                android:textStyle="bold"
                android:layout_marginBottom="25sp"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"                android:text="@string/tanggal"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/kegiatan"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="#1A72CD"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"
                    android:text="@string/setiap_tanggal_5"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/arisan_rutin"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="#0410F4"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"                android:text="@string/minggu_ke_2"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/kerja"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="#1A72CD"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"                android:text="@string/malam_jumat"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/pengajian"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="#0410F4"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"                android:text="@string/_22_maret"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:background="#0410F4"
                    android:gravity="center|left"
                    android:text="@string/tarawih"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="#1A72CD"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"                android:text="@string/_29_juni"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/adha"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="#0410F4"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"                android:text="@string/_16_agustus"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/malam"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="#1A72CD"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"                android:text="@string/_17_agustus"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/hut_ri_78"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="#0410F4"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"                android:text="@string/_18_agustus"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/lomba_islam"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="#1A72CD"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"                android:text="@string/_19_agustus"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/pembagian"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="#0410F4"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"                android:text="@string/_20_agustus"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/pembagian"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="#1A72CD"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:layout_marginEnd="20sp"                android:text="@string/_28_september"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/maulid"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/download"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>