<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.pengantar.PengantarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_pengantar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:text="@string/data_sistem_warga"
                android:textStyle="bold"
                android:layout_marginBottom="25sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="20sp"
                android:hint="masukan nama sesuai KTP"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck"
                android:autofillHints="" />

            <EditText
                android:id="@+id/ttl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="20sp"
                android:autofillHints=""
                android:hint="masukan tempat, tanggal lahir"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/jenis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="20sp"
                android:hint="masukan jenis kelamin"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/agama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="20sp"
                android:hint="masukan agama"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/pekerjaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="20sp"
                android:hint="masukan pekerjaan"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/nomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="20sp"
                android:hint="masukan nomer ktp"
                android:inputType="number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/telfon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="20sp"
                android:hint="masukan nomor telfon"
                android:inputType="phone"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="20sp"
                android:hint="@string/masukan_alamat"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btn_simpan"
                android:layout_width="100sp"
                android:layout_height="50sp"
                android:layout_marginTop="30sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20sp"
                android:backgroundTint="#150A0A"
                android:text="@string/simpan" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>